chg: [markdownEditor] Fixes z-index if viewport too small

--- a/app/webroot/css/markdownEditor/markdownEditor.css
+++ b/app/webroot/css/markdownEditor/markdownEditor.css
@@ -61,6 +61,7 @@
 }
 
 #viewer {
+    position: relative;
     width: 100%;
     max-width: 1200px;
     margin: auto;
